--- a/charts/dremio_v2/values.yaml
+++ b/charts/dremio_v2/values.yaml
@@ -237,6 +237,7 @@ executor:
   #nodeSelector: {}
   #tolerations: []
 
+  # DEPRECATION NOTICE: The nodeLifecycleService feature has been deprecated and is no longer supported.
   # By default, the number of Engines is static. Enable the Node Lifecycle Service
   # to enable dynamic scaling.
   # nodeLifecycleService:
