duplicate requests into limits for now

--- a/charts/dremio_v2/templates/dremio-executor.yaml
+++ b/charts/dremio_v2/templates/dremio-executor.yaml
@@ -42,6 +42,9 @@ spec:
           requests:
             cpu: {{ template "dremio.executor.cpu" (list $ $engineName) }}
             memory: "{{ template "dremio.executor.memory" (list $ $engineName) }}Mi"
+          limits:
+            cpu: {{ template "dremio.executor.cpu" (list $ $engineName) }}
+            memory: "{{ template "dremio.executor.memory" (list $ $engineName) }}Mi"
         volumeMounts:
         - name: {{ template "dremio.executor.volumeClaimName" (list $ $engineName) }}
           mountPath: /opt/dremio/data
